EKS/manifests/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-lab
  labels:
    app.kubernetes.io/name: eks-lab
    env: learning
