EKS/manifests/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-app-svc
  namespace: eks-lab
  labels:
    app: eks-app
spec:
  selector:
    app: eks-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
