EKS/manifests/03-ingress-alb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-app-ingress
  namespace: eks-lab
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-app-svc
                port:
                  number: 80
